--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
     "name": "✬Made By Ahmad Hassan✬",
     "description": "World Best Whatsapp Bot",
-    "logo": "https://i.ibb.co/GnqjtyG/164ff8587741.jpg",
-    "keywords": ["sew", "sewqueen"],
+    "logo": "https://i.ibb.co/kMQNpvD/6bf144aa9545.jpg",
+    "keywords": ["Ahmad", "Hassan"],
     "stack": "container",
     "env": {
         "_SEW_QUEEN_SESSION": {
